syntax = "proto3";

package yh_conversation;

// 响应状态
message Status {
    int64 number = 1;
    int32 code = 2;
    string msg = 3;
}

// 列出对话
message ConversationList {
    Status status = 1;
    repeated ConversationData data = 2;
    int32 total = 3;
    string request_id = 4;
    
    message ConversationData {
        string chat_id = 1;
        int32 chat_type = 2;
        string name = 3;
        string chat_content = 4;
        int64 timestamp_ms = 5;
        int32 unread_message = 6;
        int32 at = 7;
        int64 avatar_id = 8;
        string avatar_url = 9;
        int32 do_not_disturb = 11;
        int64 timestamp = 12;
        AtData at_data = 14;
        int32 certification_level = 16;

        message AtData {
            int64 unknown = 1;
            string mentioned_id = 2;
            string mentioned_name = 3;
            string mentioned_in = 4;
            string mentioner_id = 6;
            string mentioner_name = 7;
            int64 msg_seq = 8;
        }
    }
}
